// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pds-skeleton() > should return correct css for opts: { theme: 'dark' } 1`] = `
"div {
  background: #212225 linear-gradient(to right, transparent 0%, #1a1b1e 20%, transparent 50%) 0 0/200% 100%;
  display: block;
  border-radius: 4px;
  animation: skeletonAnimation 0.6s cubic-bezier(0.25, 0.1, 0.25, 1) infinite;
}
@keyframes skeletonAnimation {
  from {
    background-position-x: 100%;
  }
  to {
    background-position-x: -100%;
  }
}"
`;

exports[`pds-skeleton() > should return correct css for opts: { theme: 'light' } 1`] = `
"div {
  background: #eeeff2 linear-gradient(to right, transparent 0%, #f7f7f7 20%, transparent 50%) 0 0/200% 100%;
  display: block;
  border-radius: 4px;
  animation: skeletonAnimation 0.6s cubic-bezier(0.25, 0.1, 0.25, 1) infinite;
}
@keyframes skeletonAnimation {
  from {
    background-position-x: 100%;
  }
  to {
    background-position-x: -100%;
  }
}"
`;

exports[`pds-skeleton() > should return correct css for opts: {} 1`] = `
"div {
  background: #eeeff2 linear-gradient(to right, transparent 0%, #f7f7f7 20%, transparent 50%) 0 0/200% 100%;
  display: block;
  border-radius: 4px;
  animation: skeletonAnimation 0.6s cubic-bezier(0.25, 0.1, 0.25, 1) infinite;
}
@keyframes skeletonAnimation {
  from {
    background-position-x: 100%;
  }
  to {
    background-position-x: -100%;
  }
}"
`;
